# github-stats-rs

./: Cargo.toml  README.md
.github/workflows/: main.yml  rust.yml
src/: main.rs
src/algebra/: github.rs
src/domain/: stats.rs
src/service/: github.rs
src/service/configuration/: mod.rs
