[package]
name = "github-stats-rs"
version = "0.1.1"
edition = "2021"

[profile.release]
lto = "thin"

[lib]
path = "src/lib.rs"

[[bin]]
name = "github-stats-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
confique = { version = "0.3.0", features = ["yaml"] }
derive_builder = "0.20.2"
dotenvy = "0.15.7"

graphql_client = { version = "0.14.0", features = [
  "reqwest",
] }
reqwest = { version = "0.11.27", features = ["json"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }

tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "registry",
] }
